[gd_scene load_steps=10 format=2]

[ext_resource path="res://Data/EXPERIMENTS/A10/BlueNoise.png" type="Texture2D" id=1]
[ext_resource path="res://Data/EXPERIMENTS/A10/a10.png" type="Texture2D" id=2]
[ext_resource path="res://Data/EXPERIMENTS/A10/A10.gd" type="Script" id=3]
[ext_resource path="res://Data/EXPERIMENTS/A10/sndImpactGround.wav" type="AudioStream" id=5]
[ext_resource path="res://Data/EXPERIMENTS/A10/sndWrathOfGod.wav" type="AudioStream" id=6]
[ext_resource path="res://Data/EXPERIMENTS/A10/sndIncomingConfirm.wav" type="AudioStream" id=8]
[ext_resource path="res://Data/EXPERIMENTS/A10/sndFlyBy.wav" type="AudioStream" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform float angle_degrees ;
uniform sampler2D noise;
uniform int Samples = 8; //MUST BE A MULTIPLE OF 2
uniform float strength : hint_range(0,1.0, 0.0001);

//	Directional Blur Shader
// Adapted from https://www.shadertoy.com/view/ldBXWG

vec4 DirectionalBlur(in vec2 uv, in vec2 MotionVector, in sampler2D Texture2D)
{
    vec4 Color = vec4(0.0);  
    float Noise = texture(noise,uv*20.0).x-0.485;
 
    for (int i=1; i<=Samples/2; i++)
    {
	Color += texture(Texture2D,uv+ (float(i)*MotionVector ) /float(Samples/2)*Noise*2.0);
	Color += texture(Texture2D,uv- (float(i)*MotionVector ) /float(Samples/2)*Noise*2.0);
    }    
    return Color/(float(Samples));    
}


void fragment(){
	vec2 blur_vector = vec2(cos(radians(angle_degrees)),sin(radians(angle_degrees)))*strength;
	COLOR=DirectionalBlur(UV, blur_vector*strength, TEXTURE);
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/angle_degrees = null
shader_param/Samples = 30
shader_param/strength = 0.2632
shader_param/noise = ExtResource( 1 )

[node name="A10" type="Node2D" groups=["EXPERIMENT_A10"]]
script = ExtResource( 3 )

[node name="a10" type="Sprite2D" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
material = SubResource( 2 )
position = Vector2( -10000, 0 )
z_index = 6
texture = ExtResource( 2 )
offset = Vector2( -5000, 0 )

[node name="fly_by" type="AudioStreamPlayer2D" parent="a10"]
position = Vector2( -5000, 0 )
stream = ExtResource( 9 )
max_distance = 60000.0
bus = "SFX"

[node name="bullet_cache" type="Node2D" parent="a10"]
position = Vector2( -5000, 0 )

[node name="incoming_confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="ground_impact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 10000.0
bus = "SFX"

[node name="wrath_of_god" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
max_distance = 20000.0
attenuation = 0.267943
bus = "SFX"
